rtpvrawpay: don't use buffer lists if everything fits into one buffer

People might use very large mtu sizes where every payload
fits into a single output packet.

https://bugzilla.gnome.org/show_bug.cgi?id=795758